# 100-React-Projects

./: .gitignore  README.md
01_PromptVistaML/: .gitignore  package-lock.json  package.json
01_PromptVistaML/src/: App.jsx  index.css
02_DataScienceShow/: .env  index.html
02_DataScienceShow/src/: App.jsx
03_LnT_Tracker/: README.md  tailwind.config.js
03_LnT_Tracker/src/: App.jsx  HomePage.jsx  index.css  main.jsx
04_portfolio/: package.json
04_portfolio/src/: App.jsx  index.css
05_mathbits/: .env  README.md  index.html  package-lock.json  package.json  supabase_schema.sql  tailwind.config.js
05_mathbits/src/: App.jsx  index.css
06_PixelAttend/: app.py  requirements.txt
09_Minivault/: README.md  package-lock.json
09_Minivault/client/: index.html  package-lock.json  package.json
09_Minivault/server/: db.js  index.js  package.json
10_DotMeHR/: README.md  package-lock.json  package.json  tailwind.config.js
10_DotMeHR/src/: index.css
10_VistaMeHR/: index.html  supabase-schema.sql
10_VistaMeHR/src/: App.jsx
13_VistaSecure_AI/: .gitignore
13_VistaSecure_AI/sdk/python/: LICENSE  README.md  pyproject.toml
13_VistaSecure_AI/sdk/python/vista/: __init__.py  cli.py  client.py  config.py  types.py
DataScienceShow/: index.html  package-lock.json  package.json
GDG_NEHU/: index.html  package-lock.json  package.json  tailwind.config.js
GDG_NEHU/src/: App.jsx  (+1 more)
LnT_Tracker/: README.md  index.html  package-lock.json  package.json  vite.config.js
PromptVistaML/: index.html  tailwind.config.js
portfolio/: README.md  index.html  package-lock.json
(+148 files in other folders)
