[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vista"
version = "0.1.0"
description = "Vista Secure AI - Python SDK"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "pydantic",
]

[project.scripts]
vista = "vista.cli:main"
